package DOO.DD.DD00.v002extensible;

public interface VisitadorPersona {

	void visitar(Mujer mujer);
	void visitar(Hombre hombre);
}
